# stm32_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32Hal.ioc
Core/Inc/: FreeRTOSConfig.h  result.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
CoreLib/freertos_cpp/: CMakeLists.txt  EventGroup.cpp  EventGroup.hpp  Mutex.cpp  ReadWriteLock.cpp  Semaphore.hpp  StreamBuffer.hpp  Task.cpp  TickHook.cpp
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_flash_ramfunc.c
Toolchain/: stm32f4_gcc.cmake
core/inc/: FreeRTOSConfig.h
core/outcome/: result.hpp
core/src/: freertos.c  main.cpp
core_lib/freertos_cpp/: CMakeLists.txt  Critical.hpp  EventGroup.cpp  EventGroup.hpp  Mutex.cpp  Mutex.hpp  Queue.cpp  Queue.hpp  ReadWriteLock.cpp  ReadWriteLock.hpp  Semaphore.cpp  Semaphore.hpp  StreamBuffer.cpp  StreamBuffer.hpp  Task.cpp  Task.hpp  Tick.hpp  TickHook.hpp  Timer.cpp  Timer.hpp
drivers/CMSIS/: CMakeLists.txt
drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
toolchain/: stm32f4_gcc.cmake
